<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lecture.question.QuestionFragment">

    <me.maximpestryakov.katexview.KatexView
        android:id="@+id/lecture_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorPrimaryText"
        android:textSize="24sp"
        tools:text="Вопрос" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lecture_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/answer"
        android:layout_below="@+id/lecture_question"
        android:layout_marginTop="16dp"
        app:layoutManager="LinearLayoutManager" />

    <EditText
        android:id="@+id/symbolicAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/lecture_question"
        android:layout_alignStart="@+id/lecture_question"
        android:layout_below="@+id/lecture_question"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:minWidth="88dp"
        android:text="@string/answer"
        android:textColor="@color/white"
        android:visibility="gone"
        app:backgroundTint="@color/answerButton"
        tools:ignore="MissingPrefix"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/answer"
        android:minWidth="88dp"
        android:text="@string/skip"
        android:visibility="gone"
        app:backgroundTint="@color/white"
        tools:ignore="MissingPrefix"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/answered_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/answered_question"
        android:textSize="20sp"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>
